--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,13 @@ body {
     font-style: italic;
     margin: 0; 
     display: grid;
-        grid-template-columns: 15% auto;
-        grid-template-rows: min-content auto min-content;
+    min-height: 100vh;
+        grid-template-rows: min-content min-content auto min-content;
         grid-template-areas: 
-            "navigation header"
-            "navigation content"
-            "navigation footer";
+            "navigation"
+            "header"
+            "content"
+            "footer";
 }
 
 h1{
@@ -22,11 +23,11 @@ h1{
     width: 90%;
    }
 
-   #navigation ul{
+   #navigation>ul{
        display: flex;
        justify-content: space-around;
        align-items: center;
-       flex-direction: column;
+       flex-direction: row;
        flex-wrap: wrap;
        padding: 0;
    }
@@ -45,10 +46,9 @@ h1{
 }
 
 #navigation .dropdown {
-    padding: 5px;
     display: none;
     position: absolute;
-    top: 20px;
+    top: 28px;
     left:0;
 }
 
@@ -60,7 +60,7 @@ h1{
 @media(min-width: 750px){
     body{
         grid-template-columns: 15% auto;
-        grid-template-rows: min-content auto min-content;
+        grid-template-rows: 40vh auto min-content;
         grid-template-areas: 
             "navigation header"
             "navigation content"
@@ -100,6 +100,10 @@ img {
 #header {
     background-color: tomato;
     grid-area: header;
+}
+
+#navigation>ul{
+    flex-direction: column;
 }
 
 #navigation li:first-child {
